--- a/src/components/molecule/AdminNewProject/Setup/styles.module.css
+++ b/src/components/molecule/AdminNewProject/Setup/styles.module.css
@@ -42,3 +42,30 @@
   justify-content: center;
   align-items: center;
 }
+
+.checkedBuildingPiece {
+  display: flex;
+  gap: var(--spacing-06);
+  align-items: center;
+}
+
+.CheckboxRoot {
+  background-color: var(--color-white);
+  width: 25px;
+  height: 25px;
+  border-radius: var(--radius-1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 10px black;
+}
+.CheckboxRoot:hover {
+  background-color: var(--color-blue-500);
+}
+.CheckboxRoot:focus {
+  box-shadow: 0 0 0 2px black;
+}
+
+.CheckboxIndicator {
+  color: var(--color-blue-500);
+}
