--- a/src/components/organisms/Instellingen/styles.module.css
+++ b/src/components/organisms/Instellingen/styles.module.css
@@ -2,10 +2,10 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-08);
   align-items: center;
-  padding-block: var(--spacing-08);
-  padding-inline: 25%;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 }
 
 .subContainer {
@@ -13,10 +13,47 @@
   flex-direction: column;
   gap: var(--spacing-08);
   width: 100%;
+  padding-bottom: var(--spacing-08);
+  background-color: white;
+  
+  @media (--xl-n-above) {
+    max-width: 1440px;
+  }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-08);
+  padding-inline: 25%;
 }
 
 .profile {
+  z-index: 1;
   border-radius: var(--radius-round);
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-block: var(--spacing-08);
+  margin-top: var(--spacing-06);
+
+  @media (max-width: 1140px) {
+    flex-direction: column;
+    gap: var(--spacing-06);
+    align-items: center;
+  }
+}
+
+.banner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding-block: var(--spacing-08);
 }
 
 .park {
@@ -26,12 +63,12 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: -10;
     content: '';
     background-image: url('/img/park.png');
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-    opacity: .1;
+    opacity: .4;
   }
 }
 
@@ -42,12 +79,12 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: -10;
     content: '';
     background-image: url('/img/street.png');
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-    opacity: .1;
+    opacity: .4;
   }
 }
 
@@ -58,11 +95,51 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: -10;
     content: '';
     background-image: url('/img/square.png');
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-    opacity: .1;
+    opacity: .4;
   }
+}
+
+.DialogOverlay {
+  position: fixed;
+  inset: 0;
+  background-color: black;
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.DialogContent {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 90vw;
+  max-width: 450px;
+  max-height: 85vh;
+  padding: 25px;
+  background-color: white;
+  border-radius: 6px;
+  box-shadow: hsl(206deg 22% 7% / 35%) 0 10px 38px -10px, hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
+  transform: translate(-50%, -50%);
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.DialogContent:focus {
+  outline: none;
+}
+
+.DialogTitle {
+  margin: 0;
+  font-size: 17px;
+  font-weight: 500;
+  color: var(--mauve12);
+}
+
+.DialogDescription {
+  margin: 10px 0 20px;
+  font-size: 15px;
+  line-height: 1.5;
+  color: var(--mauve11);
 }
