--- a/src/components/organisms/Instellingen/styles.module.css
+++ b/src/components/organisms/Instellingen/styles.module.css
@@ -124,11 +124,15 @@
   width: 90vw;
   max-width: 450px;
   max-height: 85vh;
-  padding: 25px;
+  padding: var(--spacing-06);
   background-color: white;
   border-radius: var(--radius-2);
   transform: translate(-50%, -50%);
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.passwordContent {
+  gap: var(--spacing-06);
 }
 
 .DialogContent:focus {
@@ -147,6 +151,12 @@
   line-height: 1.5;
 }
 
+.DialogPasswordDescription {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-04);
+}
+
 .IconButton {
   position: absolute;
   top: var(--spacing-03);
@@ -163,5 +173,12 @@
 .button-wrapper {
   display: flex;
   gap: var(--spacing-06);
+  width: 100%;
+}
+
+.password {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-04);
   width: 100%;
 }
