--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -10,8 +10,9 @@
 }
 
 .productListing {
-  overflow-x: auto;
+  position: relative;
   display: flex;
+  flex-direction: column;
   flex: 0 0 auto;
   align-items: center;
   justify-content: center;
@@ -21,7 +22,40 @@
   background-color: var(--color-grey-50);
   border-radius: var(--radius-2);
   cursor: pointer;
+  transition: all 250ms;
 }
+
+.productName,
+.productWeight {
+  transition: all 50ms;
+  opacity: 0;
+  position: absolute;
+  font-weight: 600;
+  transform: translateY(-2rem) scale(0.3);
+  z-index: 100;
+  background-color: var(--color-white);
+  padding: var(--spacing-01) var(--spacing-03);
+  border-radius: var(--radius-round);
+  box-shadow: var(--shadow-sm);
+  z-index: 100;
+  white-space: nowrap;
+}
+
+.productWeight {
+  transform: translateY(2rem) scale(0.3);
+}
+
+.productListing:hover .productName {
+  transform: translateY(-3rem) scale(1);
+  opacity: 1;
+}
+
+.productListing:hover .productWeight {
+  transform: translateY(3rem) scale(1);
+  opacity: 1;
+}
+
+
 
 .active {
   background-color: var(--color-yellow-300);
