--- a/src/components/molecule/BuilderMap/styles.module.css
+++ b/src/components/molecule/BuilderMap/styles.module.css
@@ -17,13 +17,13 @@
 }
 
 .productPreviewContainer {
+  display: none;
   position: absolute;
   width: 3rem;
   height: 3rem;
-  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 200;
+  z-index: 100;
   background-color: var(--color-white);
   border-radius: var(--radius-2);
 }
