--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -3,9 +3,10 @@
   border-radius: var(--radius-2);
   display: flex;
   gap: var(--spacing-04);
-  padding: 12px;
+  padding: 16px 12px;
   width: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   flex: 0;
 }
 
