--- a/src/components/atoms/Dropdown/NavUser/styles.module.css
+++ b/src/components/atoms/Dropdown/NavUser/styles.module.css
@@ -5,6 +5,7 @@
 .dropdownWrapper {
   position: relative;
   z-index: 99;
+  min-width: calc(110px + var(--spacing-04));
 }
 
 .button {
@@ -14,6 +15,7 @@
   background: var(--color-grey-100);
   z-index: 10;
   color: var(--color-black);
+  min-width: calc(110px + var(--spacing-04));
 }
 .button:hover {
   background: var(--color-blue-300);
@@ -32,6 +34,7 @@
   flex-direction: column;
   gap: 12px;
   width: 100%;
+  min-width: calc(110px + var(--spacing-04));
   padding: var(--spacing-08) var(--spacing-04) var(--spacing-04) var(--spacing-04);
   background: var(--color-blue-500);
   border-radius: 0 0 var(--radius-2) var(--radius-2);
