--- a/src/pages/profile/styles.module.css
+++ b/src/pages/profile/styles.module.css
@@ -15,6 +15,7 @@
   width: 100%;
   height: 410px;
   z-index: -1;
+  opacity: 0.4;
 }
 
 .main {
@@ -27,6 +28,25 @@
 .mainHeader {
   display: flex;
   justify-content: space-between;
+}
+
+.headerWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: var(--spacing-04);
+}
+
+.headerImage {
+  width: 250px;
+  aspect-ratio: 1/1;
+  border-radius: var(--radius-round);
+  object-fit: cover;
+}
+
+.headerTitle {
+  color: var(--color-title);
 }
 
 .bijdragen {
