--- a/src/components/atoms/Thermometer/styles.module.css
+++ b/src/components/atoms/Thermometer/styles.module.css
@@ -19,8 +19,9 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 30%;
+  width: 0%;
   background-color: var(--color-green-300);
+  transition: width 0.3s ease;
 }
 
 .thermoTitle {
