--- a/src/components/atoms/Dropdown/NavUser/styles.module.css
+++ b/src/components/atoms/Dropdown/NavUser/styles.module.css
@@ -27,6 +27,16 @@
   gap: 12px
 }
 
+.profilePic {
+  position: relative;
+  width: 24px;
+  aspect-ratio: 1/1;
+}
+.profilePicImg {
+  object-fit: cover;
+  border-radius: var(--radius-round);
+}
+
 .dropdownMenu {
   z-index: 0;
   position: absolute;
