--- a/src/components/atoms/Input/styles.module.css
+++ b/src/components/atoms/Input/styles.module.css
@@ -1,4 +1,5 @@
 .inputBasic {
+  position: relative;
   width: 100%;
   padding: var(--spacing-02) var(--spacing-01);
   font-size: var(--font-size-medium);
@@ -10,7 +11,7 @@
     outline-color: var(--color-blue-300);
   }
 
-  &:focus {
+  &:focus-within {
     outline-width: 2px;
     outline-color: var(--color-blue-400);
   }
@@ -30,4 +31,19 @@
 
 .sizeLarge {
   max-width: 100%;
+}
+
+.input {
+  width: calc(100% - var(--spacing-04) - var(--spacing-02));
+  outline: none;
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  right: var(--spacing-02);
+  width: var(--spacing-04);
+  height: var(--spacing-04);
+  color: var(--color-green-500);
+  transform: translateY(-50%);
 }
