--- a/src/components/organisms/Instellingen/styles.module.css
+++ b/src/components/organisms/Instellingen/styles.module.css
@@ -182,3 +182,21 @@
   gap: var(--spacing-04);
   width: 100%;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-04);
+  width: 100%;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-02);
+  width: 100%;
+}
+
+.label {
+  font-size: var(--font-size-details);
+}
