--- a/src/components/molecule/ProjectCard/Column/styles.module.css
+++ b/src/components/molecule/ProjectCard/Column/styles.module.css
@@ -25,6 +25,8 @@
 }
 
 .cardImg {
+  display: flex;
+  align-items: flex-end;
   position: relative;
   width: 100%;
   height: 196px;
@@ -53,6 +55,34 @@
 .btnContainer {
   display: flex;
   gap: var(--spacing-04);
+}
+
+.faseBoundNotice {
+  position: relative;
+  z-index: 200;
+  justify-self: end;
+  display: flex;
+  justify-content: flex-end;
+  height: fit-content;
+  width: 100%;
+  text-align: right;
+  padding: 1rem;
+  color: var(--color-white);
+  font-weight: 600;
+}
+
+.faseBoundNotice__blue p {
+  border-radius: var(--radius-round);
+  padding: 0.3rem 0.5rem;
+  width: fit-content;
+  background-color: var(--color-blue-500);
+}
+
+.faseBoundNotice__green p {
+  border-radius: var(--radius-round);
+  width: fit-content;
+  padding: 0.3rem 0.5rem;
+  background-color: var(--color-green-500);
 }
 
 @media (--md-n-above) {
