--- a/src/components/organisms/Instellingen/styles.module.css
+++ b/src/components/organisms/Instellingen/styles.module.css
@@ -81,7 +81,7 @@
     bottom: 0;
     left: 0;
     content: '';
-    background-image: url('/img/street.png');
+    background-image: url('/img/straat.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
