--- a/src/components/molecule/ProjectCard/Column/styles.module.css
+++ b/src/components/molecule/ProjectCard/Column/styles.module.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-02);
+  gap: var(--spacing-04);
   width: 100%;
   height: fit-content;
   padding: var(--spacing-03);
@@ -35,6 +35,21 @@
 
 .imageBorderRadius {
   border-radius: var(--radius-2);
+}
+
+.projectTitle {
+  color: var(--color-blue-500);
+}
+
+.trimWords {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+  width: 100%;
+  height: 100%;
 }
 
 .cardHeader {
