change typo and type selector

--- a/src/assets/styles/pages/dashboard/Dashboard.module.css
+++ b/src/assets/styles/pages/dashboard/Dashboard.module.css
@@ -28,7 +28,7 @@
 }
 
 .filter {
-  width: 117px;
+  width: fit-content;
   border-radius: var(--radius-2);
   box-shadow: var(--shadow-xs);
   text-align: center;
