--- a/src/components/molecule/CreatieSelector/styles.module.css
+++ b/src/components/molecule/CreatieSelector/styles.module.css
@@ -69,3 +69,62 @@
 .RadioGroupItem[data-state='checked'].background {
   outline: 3px solid var(--color-purple-500);
 }
+
+.viewIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  background-color: var(--color-purple-500);
+  position: absolute;
+  width: var(--spacing-09);
+  height: var(--spacing-09);
+  right: 0;
+  top: 0;
+  border-radius: 0 var(--radius-1) 0 var(--radius-1);
+  color: var(--color-white);
+  transition: all 75ms;
+}
+
+.viewIcon:hover {
+  background-color: var(--color-purple-400);
+}
+
+.peakContainer {
+  top: 0;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.peak_close {
+  z-index: 100;
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
+  color: var(--color-white);
+}
+
+.peak_backface {
+  z-index: 100;
+  z-index: 50;
+  opacity: 60%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-black);
+}
+
+.peak_overlay {
+  z-index: 100;
+  overflow: hidden;
+  border-radius: var(--border-size-3);
+  box-shadow: var(--shadow-xl);
+  position: absolute;
+  width: 80vw;
+  height: 70vh;
+}
