--- a/src/components/organisms/Admin/AdminUsers/styles.module.css
+++ b/src/components/organisms/Admin/AdminUsers/styles.module.css
@@ -15,7 +15,10 @@
   column-gap: 2rem;
 }
 
-.usersContainer {
+.UsersContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   height: 100%;
   overflow-y: auto;
 }
