--- a/src/components/molecule/3dloader/styles.module.css
+++ b/src/components/molecule/3dloader/styles.module.css
@@ -1,6 +1,6 @@
 .loadingContainer {
   width: 100%;
-  height: var(--map-size-base);
+  height: var(--map-height-loader);
   display: flex;
   justify-content: center;
   align-items: center;
