--- a/src/components/molecule/ProjectCard/Column/styles.module.css
+++ b/src/components/molecule/ProjectCard/Column/styles.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   gap: var(--spacing-04);
   width: 100%;
-  height: fit-content;
+  height: 100%;
   padding: var(--spacing-03);
   background-color: var(--color-white);
   border-radius: var(--spacing-02);
@@ -23,6 +23,8 @@
   padding: 0;
   margin: 0;
 }
+
+.cardDescription { flex-grow: 1; }
 
 .cardImg {
   display: flex;
